<resources>
    <string name="app_name">Amount</string>
    <string name="txt_new_item">รายการใหม่</string>
    <string name="txt_amount_type">ชนิดรายการ</string>
    <string name="txt_expense">รายจ่าย</string>
    <string name="txt_income">รายรับ</string>
    <string name="txt_select_date">วัน เดือน ปี</string>
    <string name="txt_title_new_item">ชื่อรายการ</string>
    <string name="txt_amount_money">จำนวนเงิน</string>
    <string name="txt_save_data">บันทึกข้อมูล</string>
    <string name="txt_title">Title</string>
    <string name="txt_money">Money</string>
    <string name="txt_other">อื่นๆ</string>
    <string name="txt_empty_data">ไม่มีข้อมูล</string>
</resources>
