<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.NewItemFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_amount_type"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <RadioButton
            android:id="@+id/radioExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txt_expense" />

        <RadioButton
            android:id="@+id/radioIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_income" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_select_date"
        android:textSize="16sp" />

    <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_edit_text"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        app:dateFormat="dd-MM-yyyy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_new_item"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_edit_text"
        android:padding="8dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_amount_money"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_edit_text"
        android:ellipsize="end"
        android:hint="0"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="8dp" />

    <EditText
        android:id="@+id/editOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_edit_text"
        android:ellipsize="end"
        android:hint="Other Title"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSaveData"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/txt_save_data"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>